# convo-insight-platform

./: .env.example  .gitignore  1_project_overview.md  2_project_plan_draft.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  conftest.py  contributors.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  django.yml  python-package.yml
Datasets/: Conversation[dot]csv.txt  intent[dot]json.txt
apps/accounts/: forms.py  views.py
apps/analysis/: admin.py  models.py  tasks.py  views.py
apps/api/: pagination.py  permissions.py  serializers.py  urls.py  views.py
apps/common/: text_chat_handler.py
apps/convochat/: admin.py  apps.py  consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
apps/dashboard/: dashboard_models.py  helper.md  models.py  urls.py  views.py
apps/general_assistant/: admin.py  apps.py  consumers.py  models.py  services.py  urls.py  views.py
apps/llms/: sagemaker_integration.py  tasks.py
apps/orders/: admin.py  consumers.py  forms.py  langgraph_agent.py  langraph_agent_sample.md  models.py  order_consumers.py  routing.py  tasks.py  urls.py  views.py
apps/playground/: admin.py  consumers.py  models.py  sentiment_model_analysis.py  text_classification_rag_processor.py  text_classification_vector_store.py  urls.py  views.py
backend/: pyproject.toml  requirements.txt
config/: asgi.py  celery.py  models.py  urls.py
data_processing/: preprocess.py
docs/: ARCHITECTURE.md  INTERN_CONTRIBUTING.md  INTERN_ONBOARDING.md  MENTAL_MODEL.md
examples/: prototype_convochat.py  prototype_with_mlmodels.py
frontend/: .gitignore  README.md  eslint.config.mjs  jsconfig.json  next.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.js
prototype/: prototype_with_mlmodels.py  readme.md
scripts/: init-db.sql
(+306 files in other folders)
